--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.pytest_cache
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
